# objective-z

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  VERSION  hardware-map.yaml  justfile  prj.conf  west.yml
benchmarks/c3/: CMakeLists.txt  prj.conf
benchmarks/c3/src/: entry.c  main.c3  timing_shim.c
benchmarks/memory/objc/: CMakeLists.txt  prj.conf  sample.yaml
benchmarks/memory/objc/src/: main.c  mem_helpers.m
benchmarks/memory/rust/: CMakeLists.txt  Cargo.toml  prj.conf
benchmarks/memory/rust/boards/: mps2_an385.overlay
benchmarks/memory/rust/src/: heap_shim.c  lib.rs
benchmarks/objc/: CMakeLists.txt  prj.conf  sample.yaml
benchmarks/objc/src/: bench_helpers.m  main.c  main.m
benchmarks/zig/: CMakeLists.txt  prj.conf
benchmarks/zig/src/: main.zig
objc/: CMakeLists.txt  Kconfig
objc/cmake/: ObjcClang.cmake  objc_sections.ld  oz_transpile.cmake  version.h.in
objc/include/Foundation/: Foundation.h  NSFastEnumeration.h  OZArray.h  OZAutoreleasePool.h  OZDictionary.h  OZGPIOOutput.h  OZString+Protocol.h  OZString.h  Object.h
objc/include/objc/: NSFastEnumeration.h  NXConstantString+Protocol.h  NXConstantString.h  OZArray.h  OZAutoreleasePool.h  OZDictionary.h  OZMutableString.h  OZNumber.h  OZObject.h  OZString+Protocol.h  OZString.h  Object+Protocol.h  Object.h  Protocol.h  arc.h  assert.h  dtable.h  malloc.h  objc.h  pool.h  runtime.h
objc/include/oz_transpile/: Iterator+Protocol.h  OZArray.h  OZDictionary.h  OZLog.h  OZNumber.h  OZObject.h  OZString.h  Object+Protocol.h
objc/include/oz_transpile/Foundation/: Foundation.h
objc/include/oz_transpile/objc/: objc.h
objc/include/oz_transpile/zephyr/: kernel.h
objc/scripts/: gen_pools.py  gen_table_sizes.py  objz_gen_pools.py  objz_gen_table_sizes.py
objc/src/: NXConstantString.m  OZArray.m  OZAutoreleasePool.m  OZDictionary.m  OZLog.m  OZMutableString.m  OZNumber.m  OZObject.m  OZString.m  Object.m  Protocol.m  api.h  arc.c  blocks.c  category.c  category.h  class.c  class.h  dispatch.c  dispatch.h  dtable.c  dtable.h  hash.c  hash.h  init.m  load.c  malloc.c  message.c  module.c  objc_msgSend.S  pool.c  protocol.c  protocol.h  refcount.c  runtime.c  slot.c  statics.c  statics.h
objc/src/Foundation/: OZArray.m  OZAutoreleasePool.m  OZDictionary.m  OZGPIOOutput.m  OZGPIOPin.m  OZLog.m  OZMutableString.m  OZNumber.m  OZString.m  Object.m
objc/src/arch/riscv/: objc_msgSend.S
objc/src/oz_transpile/: OZArray.m  OZDictionary.m  OZLog.c  OZNumber.m  OZObject.m  OZString.m
objc/zephyr/: module.yml
samples/arc_demo/: CMakeLists.txt  prj.conf  sample.yaml
samples/arc_demo/src/: main.m
samples/hello_category/: CMakeLists.txt  prj.conf  sample.yaml
samples/hello_category/include/: Car+Maintenance.h  Car.h
samples/hello_category/src/: Car+Maintenance.m  Car.m  main.m
samples/hello_world/: CMakeLists.txt  prj.conf  sample.yaml
samples/hello_world/src/: main.m
samples/transpiled_led/: CMakeLists.txt  sample.yaml
samples/transpiled_led/src/: OZLed.h  OZLed.m  main.c  main.m
samples/transpiled_literals/: CMakeLists.txt  prj.conf  sample.yaml
samples/transpiled_literals/src/: main.m
samples/zbus_objc/: CMakeLists.txt  prj.conf  sample.yaml
samples/zbus_objc/include/: Producer.h  channels.h
samples/zbus_objc/src/: Producer.m  channels.c  consumer.c  main.m
tests/zephyr/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/src/: main.c  test_boxed_expr.c  test_dispatch.c  test_lifecycle.c  test_memory.c  test_protocol.c  test_timer.c
tools/oz_transpile/: README.md  __main__.py  collect.py  context.py  emit.py  extract.py  model.py  pyproject.toml  resolve.py
tools/oz_transpile/templates/: class_header.h.j2  class_source.c.j2  orphan_source.c.j2  oz_dispatch.c.j2  oz_dispatch.h.j2  oz_functions.c.j2  oz_functions.h.j2  oz_mem_slabs.c.j2  oz_mem_slabs.h.j2
tools/oz_transpile/tests/: conftest.py  test_collect.py  test_context.py  test_e2e.py  test_emit.py  test_extract.py  test_main.py  test_model.py  test_resolve.py  test_roundtrip.py
tools/oz_transpile/tests/fixtures/: expected_roundtrip_OZBlinky_ozm.c  extract_basic.ast.json  extract_basic.m  extract_category.m  extract_multiclass.m  multi_base.ast.json  multi_category.ast.json  multi_sub.ast.json  oz_led_sample.m  synchronized_sample.ast.json  synchronized_sample.m
tools/oz_transpile/tests/golden/: README.md  conftest.py  test_golden.py  update.py
tools/oz_transpile/tests/golden/empty_class/: input.ast.json  source.m
tools/oz_transpile/tests/golden/empty_class/expected/: EmptyClass.c  EmptyClass.h  EmptyClass_ozh.h  EmptyClass_ozm.c  OZObject.h  oz_dispatch.c  oz_dispatch.h  oz_mem_slabs.h
tools/oz_transpile/tests/golden/error_circular_inheritance/: config.json  input.ast.json
tools/oz_transpile/tests/golden/error_duplicate_method/: config.json  input.ast.json
tools/oz_transpile/tests/golden/error_explicit_initialize/: config.json  input.ast.json  source.m
tools/oz_transpile/tests/golden/error_forward_invocation/: config.json  input.ast.json  source.m
tools/oz_transpile/tests/golden/error_generic_source_mismatch/: config.json  input.ast.json  source.m
tools/oz_transpile/tests/golden/error_generic_type_mismatch/: config.json  input.ast.json
tools/oz_transpile/tests/golden/error_kvo/: config.json  input.ast.json  source.m
tools/oz_transpile/tests/golden/error_try_catch/: config.json  input.ast.json  source.m
tools/oz_transpile/tests/golden/multiple_args/: input.ast.json  source.m
tools/oz_transpile/tests/golden/multiple_args/expected/: Color.c  Color.h  Color_ozh.h  Color_ozm.c  (+3 more)
tools/oz_transpile/tests/golden/object_ivars_arc/: input.ast.json  source.m
tools/oz_transpile/tests/golden/pool_sizes/: config.json
tools/oz_transpile/tests/golden/protocol_dispatch/: input.ast.json  source.m
tools/oz_transpile/tests/golden/regression/: README.md
tools/oz_transpile/tests/golden/simple_inheritance/: input.ast.json  source.m
tools/oz_transpile/tests/golden/simple_led/: input.ast.json  source.m
tools/oz_transpile/tests/golden/static_dispatch_only/: input.ast.json  source.m
(+753 files in other folders)
