if(CONFIG_ZEPHYR_OBJECTIVE_C)
    zephyr_include_directories("${ZEPHYR_CURRENT_MODULE_DIR}/include")
    zephyr_include_directories("${ZEPHYR_CURRENT_MODULE_DIR}/include/runtime-gcc")
    zephyr_library()

    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/malloc.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/module.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/category.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/class.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/dtable.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/hash.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/init.m")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/message.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/NXConstantString.m")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/Object.m")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/Protocol.m")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/protocol.c")
    zephyr_library_sources("${ZEPHYR_CURRENT_MODULE_DIR}/src/statics.c")

    # add_subdirectory("${ZEPHYR_CURRENT_MODULE_DIR}/src/malloc")
    # add_subdirectory("${ZEPHYR_CURRENT_MODULE_DIR}/src/runtime-gcc")
endif()

