# SPDX-License-Identifier: Apache-2.0

[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "0.1.0"

[build-dependencies]
zephyr-build = "0.1.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
lto = true
